--- a/src/widgets/Mentor/SectionHeader/ui/SectionHeader/SectionHeader.module.css
+++ b/src/widgets/Mentor/SectionHeader/ui/SectionHeader/SectionHeader.module.css
@@ -22,3 +22,9 @@
 		font-size: 24px;
 	}
 }
+
+@media (width < 360px) {
+	.wrapper {
+		margin-bottom: 20px;
+	}
+}
